--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -19,3 +19,23 @@ body {
   /* Set the fixed height of the footer here */
   height: 50px;
 }
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.margin-right-4 {
+  margin-right: 4px;
+}
+
+.margin-top-8 {
+  margin-top: 8px;
+}
+
+.margin-bottom-16 {
+  margin-bottom: 16px;
+}
+
+#data-filter-buttons .dropdown-menu {
+  max-height: 300px;
+  overflow: auto;
+}
