--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,6 +4,8 @@ $fa-font-path:   '~font-awesome/fonts/';
 @import '../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss';
 // @import '../../node_modules/font-awesome/css/font-awesome.css';
 
+@import '../../node_modules/bubbletree/dist/bubbletree.css';
+
 html {
   position: relative;
   min-height: 100%;
