Improve look of graphs, table and tabs

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -41,3 +41,11 @@ body {
   max-height: 300px;
   overflow: auto;
 }
+
+.rd3-basic-chart {
+  text-align: center;
+}
+
+.x-smaller-font {
+  font-size: 80%;
+}
