--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -39,3 +39,14 @@ body {
   max-height: 300px;
   overflow: auto;
 }
+
+.waiter {
+  i {
+    vertical-align: middle;
+  }
+  span {
+    margin-left: 10px;
+    font-size: 18px;
+    vertical-align: middle;
+  }
+}
