--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -49,3 +49,14 @@ body {
 .x-smaller-font {
   font-size: 80%;
 }
+
+.waiter {
+  i {
+    vertical-align: middle;
+  }
+  span {
+    margin-left: 10px;
+    font-size: 18px;
+    vertical-align: middle;
+  }
+}
