--- a/app/front/scripts/directives/templates/selected-filters.html
+++ b/app/front/scripts/directives/templates/selected-filters.html
@@ -2,9 +2,9 @@
     <div class="row">
         <div id="selected-filters" class="col-xs-12">
             <span class="margin-right-4 label label-success" ng-repeat="(key, item) in dimensions.current.filters">
-                <span>{{dimensions.items[key].name}}</span>
+                <span>{{ (dimensions.find(key)).name }}</span>
                 <span>:&nbsp;</span>
-                <span>{{ dimensions.items[key].values[item] }}</span>
+                <span>{{ (dimensions.find(key)).values[item] }}</span>
                 <span>&nbsp;</span>
                 <i class="fa fa-remove cursor-pointer" ng-click="dimensions.current.dropFilter(key)"></i>
             </span>
