--- a/app/front/styles/styles.less
+++ b/app/front/styles/styles.less
@@ -65,3 +65,36 @@ body {
   max-height: 400px;
   overflow-y: auto;
 }
+
+.babbage-geoview {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.babbage-geoview-units path.selected,
+.babbage-geoview-units path:hover {
+  stroke-width: 2px;
+}
+
+.babbage-geoview-labels[hidden] {
+  display: none;
+}
+
+.babbage-geoview-labels text {
+  font-weight: 300;
+  text-anchor: middle;
+  user-select: none;
+  pointer-events: none;
+}
+
+.babbage-geoview-infocard {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  padding: 0.5em 1em;
+  background: #fcfcfc;
+  border-radius: 3px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.7);
+}
