--- a/app/views/pages/main.html
+++ b/app/views/pages/main.html
@@ -3,6 +3,8 @@
 {% block content %}
 {% raw %}
     <div ng-controller="main">
+      <babbage-geoview country-code="MD" data="data"
+        style="display: block; position: relative; width: 100%; height: 600px;"></babbage-geoview>
         <div ng-if="!isStarting">
             <available-packages></available-packages>
             <div ng-if="!isPackageLoading">
