--- a/app/front/scripts/directives/templates/dimensions.html
+++ b/app/front/scripts/directives/templates/dimensions.html
@@ -3,9 +3,9 @@
         <div class="panel-heading">Dimensions</div>
         <div class="panel-body">
             <div class="row">
-                <dimensions-group dimensions="dimensions"></dimensions-group>
-                <dimensions-filter dimensions="dimensions"></dimensions-filter>
-                <selected-filters dimensions="dimensions"></selected-filters>
+                <dimensions-group dimensions="dimensions" events="events"></dimensions-group>
+                <dimensions-filter dimensions="dimensions" events="events"></dimensions-filter>
+                <selected-filters dimensions="dimensions" events="events"></selected-filters>
             </div>
         </div>
     </div>
