--- a/app/front/scripts/directives/templates/measures.html
+++ b/app/front/scripts/directives/templates/measures.html
@@ -11,7 +11,7 @@
                            class="text-ellipsis btn"
                            ng-class="{'btn-success active': (key == measures.current), 'btn-default': (key != measures.current)}"
                            title="{{item}}" role="button"
-                           ng-click="measures.changeMeasure(key)"
+                           ng-click="events.changeMeasure(key)"
                         >{{item}}</a>
                     </div>
                 </div>
