--- a/app/front/scripts/directives/templates/available-packages.html
+++ b/app/front/scripts/directives/templates/available-packages.html
@@ -1,14 +1,14 @@
 <div class="margin-bottom-16 row">
     <div class="col-xs-12">
-        <h4>{{availablePackages.description}}</h4>
+        <h4>{{state.availablePackages.description}}</h4>
     </div>
 
     <div class="col-xs-12">
         <dropdown
-                selected="currentPackageIndex"
-                title="{{availablePackages.current}}"
-                items="availablePackages.items"
-                on-click="availablePackages.changePackage(currentPackageIndex)"
+                selected="state.currentPackageIndex"
+                title="{{state.availablePackages.current}}"
+                items="state.availablePackages.items"
+                on-click="events.changePackage(state.currentPackageIndex)"
         ></dropdown>
     </div>
 </div>
