--- a/app/front/scripts/directives/templates/dimensions.html
+++ b/app/front/scripts/directives/templates/dimensions.html
@@ -1,11 +1,13 @@
-<div class="col-xs-12">
-    <div class="panel panel-default">
-        <div class="panel-heading">Dimensions</div>
-        <div class="panel-body">
-            <div class="row">
-                <dimensions-group dimensions="dimensions" events="events"></dimensions-group>
-                <dimensions-filter dimensions="dimensions" events="events"></dimensions-filter>
-                <selected-filters dimensions="dimensions" events="events"></selected-filters>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">Dimensions</div>
+            <div class="panel-body">
+                <div class="row">
+                    <dimensions-group dimensions="dimensions" events="events"></dimensions-group>
+                    <dimensions-filter dimensions="dimensions" events="events"></dimensions-filter>
+                    <selected-filters dimensions="dimensions" events="events"></selected-filters>
+                </div>
             </div>
         </div>
     </div>
