--- a/app/views/pages/main.html
+++ b/app/views/pages/main.html
@@ -10,77 +10,79 @@
                     <measures measures="state.measures" events="events"></measures>
                     <dimensions dimensions="state.dimensions" events="events"></dimensions>
                 </div>
-                <div class="col-md-12 col-xs-12">
-                    <h2>
-                        <span>Views</span>
-                        <div class="pull-right btn-group">
-                            <button
-                                    class="fa fa-arrow-left btn btn-default"
-                                    ng-disabled="!events.canBack()"
-                                    type="button"
-                                    ng-click="events.back()"
-                            ></button>
-                            <button
-                                    class="fa fa-arrow-right btn btn-default"
-                                    ng-disabled="!events.canForward()"
-                                    type="button"
-                                    ng-click="events.forward()"
-                            ></button>
-                        </div>
-                    </h2>
-                </div>
+                <div class="row">
+                    <div class="col-md-12 col-xs-12">
+                        <h2>
+                            <span>Views</span>
+                            <div class="pull-right btn-group">
+                                <button
+                                        class="fa fa-arrow-left btn btn-default"
+                                        ng-disabled="!events.canBack()"
+                                        type="button"
+                                        ng-click="events.back()"
+                                ></button>
+                                <button
+                                        class="fa fa-arrow-right btn btn-default"
+                                        ng-disabled="!events.canForward()"
+                                        type="button"
+                                        ng-click="events.forward()"
+                                ></button>
+                            </div>
+                        </h2>
+                    </div>
 
-                <div class="col-md-12 col-xs-12 charts">
-                    <uib-tabset>
-                        <uib-tab heading="Treemap" ng-click="events.setTab('Treemap')">
-                            <babbage ng-if="!state.flag.renderingCharts && currentTab == 'Treemap'"
-                                     endpoint="http://s145.okserver.org/api/3/"
-                                     cube="{{state.availablePackages.current}}"
-                                     state="state.babbageTreeMap">
-                                <babbage-treemap></babbage-treemap>
-                            </babbage>
-                        </uib-tab>
-                        <uib-tab heading="Pie Chart" ng-click="events.setTab('PieChart')">
-                            <babbage ng-if="!state.flag.renderingCharts && currentTab == 'PieChart'"
-                                     endpoint="http://s145.okserver.org/api/3/"
-                                     cube="{{state.availablePackages.current}}"
-                                     state="state.babbageBar">
-                                <pie-chart></pie-chart>
-                            </babbage>
-                        </uib-tab>
-                        <uib-tab heading="Bar Chart" ng-click="events.setTab('BarChart')">
-                            <babbage ng-if="!state.flag.renderingCharts && currentTab == 'BarChart'"
-                                     endpoint="http://s145.okserver.org/api/3/"
-                                     cube="{{state.availablePackages.current}}"
-                                     state="state.babbageBar">
-                                <babbage-chart chart-type="bar"></babbage-chart>
-                            </babbage>
-                        </uib-tab>
-                        <uib-tab heading="Line Chart" ng-click="events.setTab('LineChart')">
-                            <babbage ng-if="!state.flag.renderingCharts && currentTab == 'LineChart'"
-                                     endpoint="http://s145.okserver.org/api/3/"
-                                     cube="{{state.availablePackages.current}}"
-                                     state="state.babbageBar">
-                                <babbage-chart chart-type="line"></babbage-chart>
-                            </babbage>
-                        </uib-tab>
-                        <uib-tab heading="Bubble Tree" ng-click="events.setTab('BubbleTree')">
-                            <babbage ng-if="!state.flag.renderingCharts && currentTab == 'BubbleTree'"
-                                     endpoint="http://s145.okserver.org/api/3/"
-                                     cube="{{state.availablePackages.current}}"
-                                     state="state.babbageBar">
-                                <bubble-tree></bubble-tree>
-                            </babbage>
-                        </uib-tab>
-                        <uib-tab heading="Table" ng-click="events.setTab('Table')">
-                            <babbage ng-if="!state.flag.renderingCharts && currentTab == 'Table'"
-                                     endpoint="http://s145.okserver.org/api/3/"
-                                     cube="{{state.availablePackages.current}}"
-                                     state="state.babbageTable">
-                                <babbage-crosstab></babbage-crosstab>
-                            </babbage>
-                        </uib-tab>
-                    </uib-tabset>
+                    <div class="col-md-12 col-xs-12 charts">
+                        <uib-tabset>
+                            <uib-tab heading="Treemap" ng-click="events.setTab('Treemap')">
+                                <babbage ng-if="!state.flag.renderingCharts && currentTab == 'Treemap'"
+                                         endpoint="http://s145.okserver.org/api/3/"
+                                         cube="{{state.availablePackages.current}}"
+                                         state="state.babbageTreeMap">
+                                    <babbage-treemap></babbage-treemap>
+                                </babbage>
+                            </uib-tab>
+                            <uib-tab heading="Pie Chart" ng-click="events.setTab('PieChart')">
+                                <babbage ng-if="!state.flag.renderingCharts && currentTab == 'PieChart'"
+                                         endpoint="http://s145.okserver.org/api/3/"
+                                         cube="{{state.availablePackages.current}}"
+                                         state="state.babbageBar">
+                                    <pie-chart></pie-chart>
+                                </babbage>
+                            </uib-tab>
+                            <uib-tab heading="Bar Chart" ng-click="events.setTab('BarChart')">
+                                <babbage ng-if="!state.flag.renderingCharts && currentTab == 'BarChart'"
+                                         endpoint="http://s145.okserver.org/api/3/"
+                                         cube="{{state.availablePackages.current}}"
+                                         state="state.babbageBar">
+                                    <babbage-chart chart-type="bar"></babbage-chart>
+                                </babbage>
+                            </uib-tab>
+                            <uib-tab heading="Line Chart" ng-click="events.setTab('LineChart')">
+                                <babbage ng-if="!state.flag.renderingCharts && currentTab == 'LineChart'"
+                                         endpoint="http://s145.okserver.org/api/3/"
+                                         cube="{{state.availablePackages.current}}"
+                                         state="state.babbageBar">
+                                    <babbage-chart chart-type="line"></babbage-chart>
+                                </babbage>
+                            </uib-tab>
+                            <uib-tab heading="Bubble Tree" ng-click="events.setTab('BubbleTree')">
+                                <babbage ng-if="!state.flag.renderingCharts && currentTab == 'BubbleTree'"
+                                         endpoint="http://s145.okserver.org/api/3/"
+                                         cube="{{state.availablePackages.current}}"
+                                         state="state.babbageBar">
+                                    <bubble-tree></bubble-tree>
+                                </babbage>
+                            </uib-tab>
+                            <uib-tab heading="Table" ng-click="events.setTab('Table')">
+                                <babbage ng-if="!state.flag.renderingCharts && currentTab == 'Table'"
+                                         endpoint="http://s145.okserver.org/api/3/"
+                                         cube="{{state.availablePackages.current}}"
+                                         state="state.babbageTable">
+                                    <babbage-crosstab></babbage-crosstab>
+                                </babbage>
+                            </uib-tab>
+                        </uib-tabset>
+                    </div>
                 </div>
             </div>
         </div>
