Accepting url params and changing it when something has been changed into UI

--- a/app/views/pages/main.html
+++ b/app/views/pages/main.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% raw %}
-    <div ng-controller="main">
+    <div>
         <div ng-if="!state.isStarting">
             <available-packages></available-packages>
             <div ng-if="!state.isPackageLoading">
