Accepting url params and changing it when something has been changed into UI

--- a/app/views/layouts/base.html
+++ b/app/views/layouts/base.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/vendor.css?{{ sessionSalt }}">
   <link rel="stylesheet" href="/app.css?{{ sessionSalt }}">
 </head>
-<body ng-app="Application">
+<body ng-app="Application" ng-controller="main">
 <div id="root"></div>
 <script type="text/javascript">
   var dataPackages = [
