--- a/app/front/styles/styles.less
+++ b/app/front/styles/styles.less
@@ -1,18 +1,3 @@
-html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 50px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 50px;
-}
 .cursor-pointer {
   cursor: pointer;
 }
@@ -21,12 +6,29 @@ body {
   margin-right: 4px;
 }
 
+.margin-bottom-4 {
+  margin-bottom: 4px;
+}
+
 .margin-top-8 {
   margin-top: 8px;
 }
 
+.margin-top-16 {
+  margin-top: 16px;
+}
+
 .margin-bottom-16 {
   margin-bottom: 16px;
+}
+
+.x-available-packages {
+  margin-top: 16px;
+  margin-bottom: 16px;
+
+  h2, h4 {
+    margin: 0 0 12px 0;
+  }
 }
 
 #data-filter-buttons .dropdown-menu {
@@ -64,4 +66,45 @@ body {
 .dropdown-menu {
   max-height: 400px;
   overflow-y: auto;
+}
+
+.babbage-geoview {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.babbage-geoview-units path.selected,
+.babbage-geoview-units path:hover {
+  stroke-width: 2px;
+}
+
+.babbage-geoview-labels[hidden] {
+  display: none;
+}
+
+.babbage-geoview-labels text {
+  font-weight: 300;
+  text-anchor: middle;
+  user-select: none;
+  pointer-events: none;
+}
+
+.babbage-geoview-infocard {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  padding: 0.5em 1em;
+  background: #fcfcfc;
+  border-radius: 3px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.7);
+}
+
+.charts .tab-content {
+  margin: 8px 0;
+
+  .tab-pane {
+    max-width: 700px;
+  }
 }
