#66 Basic auth support implementation

--- a/app/views/layouts/base.html
+++ b/app/views/layouts/base.html
@@ -32,6 +32,7 @@
 
 <script src="/modules.js?{{ sessionSalt }}"></script>
 <script src="/vendor.js?{{ sessionSalt }}"></script>
+<script src="http://s145.okserver.org/permit/sample/lib.js"></script>
 <script src="/app.js?{{ sessionSalt }}"></script>
 
 {% block footerScript %}{% endblock %}
