--- a/app/views/layouts/base.html
+++ b/app/views/layouts/base.html
@@ -28,7 +28,7 @@
 
 <script src="modules.js?{{ sessionSalt }}"></script>
 <script src="vendor.js?{{ sessionSalt }}"></script>
-<script src="http://s145.okserver.org/permit/lib"></script>
+<script src="{{ authLibraryUrl }}"></script>
 <script src="app.js?{{ sessionSalt }}"></script>
 
 {% block footerScript %}{% endblock %}
