--- a/app/front/scripts/directives/templates/measures.html
+++ b/app/front/scripts/directives/templates/measures.html
@@ -5,13 +5,13 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div id="measures" class="btn-group btn-group-justified">
-                        <a ng-repeat="(key, item) in measures.items"
+                        <a ng-repeat="item in measures.items"
                            href="javascript:void(0)"
                            class="text-ellipsis btn margin-bottom-4"
-                           ng-class="{'btn-success active': (key == measures.current), 'btn-default': (key != measures.current)}"
-                           title="{{item}}" role="button"
-                           ng-click="events.changeMeasure(key)"
-                        >{{item}}</a>
+                           ng-class="{'btn-success active': (item.key == measures.current), 'btn-default': (item.key != measures.current)}"
+                           title="{{item.value}}" role="button"
+                           ng-click="events.changeMeasure(item.key)"
+                        >{{item.value}}</a>
                     </div>
                 </div>
             </div>
