--- a/app/front/styles/styles.less
+++ b/app/front/styles/styles.less
@@ -131,5 +131,27 @@
 
   .tab-pane {
     max-width: 700px;
+    position: relative;
+  }
+}
+
+.geoview-container {
+  display: block;
+  position: relative;
+  width: 100%;
+
+  &:before {
+    content: "";
+    display: block;
+    width: 100%;
+    padding-top: 60%;
+  }
+
+  .babbage-geoview {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
   }
 }
