--- a/app/front/styles/styles.less
+++ b/app/front/styles/styles.less
@@ -126,6 +126,37 @@
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.7);
 }
 
+.babbage-geoview-legend {
+  position: absolute;
+  left: 8px;
+  bottom: 8px;
+  padding: 0.5em 1em 0.5em 3em;
+  background: #fcfcfc;
+  border-radius: 3px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.7);
+
+  & .babbage-geoview-legend-colors {
+    display: block;
+    width: 1.5em;
+    position: absolute;
+    left: 1em;
+    top: 1em;
+    bottom: 1em;
+  }
+
+  &:before {
+    content: attr(data-max);
+    display: block;
+    margin-bottom: 2em;
+  }
+
+  &:after {
+    content: attr(data-min);
+    display: block;
+    margin-top: 2em;
+  }
+}
+
 .charts .tab-content {
   margin: 8px 0;
 
