--- a/app/views/pages/main.html
+++ b/app/views/pages/main.html
@@ -91,6 +91,7 @@
                                   cube="{{state.availablePackages.current}}"
                                   state="state.babbageBar">
                                     <babbage-geoview class="geoview-container"
+                                      currency-sign="{{ state.availablePackages.currencySign }}"
                                       country-code="{{ state.availablePackages.locationCountry }}">
                                     </babbage-geoview>
                                 </babbage>
