--- a/app/front/scripts/directives/templates/measures.html
+++ b/app/front/scripts/directives/templates/measures.html
@@ -1,20 +1,3 @@
-<div class="col-xs-12 col-md-6">
-    <div class="panel panel-default">
-        <div class="panel-heading">Measures</div>
-        <div class="panel-body">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div id="measures" class="btn-group btn-group-justified">
-                        <a ng-repeat="item in measures.items"
-                           href="javascript:void(0)"
-                           class="text-ellipsis btn margin-bottom-4"
-                           ng-class="{'btn-success active': (item.key == measures.current), 'btn-default': (item.key != measures.current)}"
-                           title="{{item.value}}" role="button"
-                           ng-click="events.changeMeasure(item.key)"
-                        >{{item.value}}</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div>
+  <sidebar-list items="measures.items" selected="[measures.current]" title="Measures"></sidebar-list>
 </div>
