--- a/app/front/scripts/directives/templates/dimensions-group.html
+++ b/app/front/scripts/directives/templates/dimensions-group.html
@@ -1,16 +1,3 @@
-<div class="col-xs-12">
-    <div>Group</div>
-    <div class="row">
-        <div class="col-xs-12">
-            <div id="dimensions-group" class="btn-group">
-                <button
-                    type="button"
-                    class="btn margin-bottom-4"
-                    ng-repeat="group in dimensions"
-                    ng-class="{'btn-success active': (events.isGroupSelected(group.key)), 'btn-default': (!events.isGroupSelected(group.key))}"
-                    ng-click="events.changeGroup(group.key)"
-                >{{group.name}}</button>
-            </div>
-        </div>
-    </div>
+<div>
+  <sidebar-list items="hierarchy.dimensions" selected="[]" title="Group"></sidebar-list>
 </div>
