--- a/app/views/layouts/base.html
+++ b/app/views/layouts/base.html
@@ -14,17 +14,19 @@
 </head>
 <body ng-app="Application" ng-controller="main" class="ng-cloak">
 <div id="root"></div>
-{% if not isEmbedded %}
-  {% include "partials/header.html" %}
-{% endif %}
 
-<div class="container">
-{% block content %}{% endblock %}
+{% include "partials/header.html" %}
+
+<div class="x-page-container">
+<div>
+  <aside class="x-sidebar">{% block sidebar %}{% endblock %}</aside>
+  <div class="x-content">
+    <div class="container-fluid">{% block content %}{% endblock %}</div>
+  </div>
+</div>
 </div>
 
-{% if not isEmbedded %}
-  {% include "partials/footer.html" %}
-{% endif %}
+{% include "partials/footer.html" %}
 
 <script src="modules.js?{{ sessionSalt }}"></script>
 <script src="vendor.js?{{ sessionSalt }}"></script>
